--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header area start  -->
+ <header class="header bg-light roundad-5 py-2">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-6 col-sm">
+                <div class="header logo">
+                    <img src="images/logo.png" alt="Logo">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm">
+                <div class="header-btn text-end">
+                    <button class="btn btn-primary px-4 py-2">Blog</button>
+                </div>
+            </div>
+        </div>
+    </div>
+ </header>
+ <!-- Header area end -->
 
 
     <script src="js/bootstrap.min.js"></script>
