added all event

--- a/index.html
+++ b/index.html
@@ -63,34 +63,34 @@
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
                                 <input id="parallelogram-base" class="w-100" type="text" placeholder="b"> cm <input id="parallelogram-height" class="w-100" type="text" placeholder="h"> cm
                             </div>
-                            <button id="btn-paralleogram" class="btn w-100 roundad-3">Calculate</button>
+                            <button id="btn-parallelogram" class="btn w-100 roundad-3">Calculate</button> 
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
                             <img class="pb-5" src="images/rhombus.png" alt="Image">
                             <h2 id="rhombus-title">Rhombus</h2>
                             <h3>Area (A) = 0.5 * d1 * d2</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
-                                <input id="diagonal-one" class="w-100" type="text" placeholder="d1"> cm <input id="diagonal-two" class="w-100" type="text" placeholder="d2"> cm 
+                                <input id="input-diagonal-one" class="w-100" type="text" placeholder="d1"> cm <input id="input-diagonal-two" class="w-100" type="text" placeholder="d2"> cm 
                             </div>
-                            <button id="btn-rhombus" class="w-100 roundad-3">Calculate</button>
+                            <button id="btn-rhombus" class="btn w-100 roundad-3">Calculate</button>
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
                             <img class="pb-5" src="images/parallelogram.png" alt="Image">
                             <h2 id="pentagon-title">Pentagon</h2>
                             <h3>Area (A) = 0.5 * p * b</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
-                                <input id="input-pentagon-one" class="w-100" type="text" placeholder="p"> cm <input class="w-100" type="text" placeholder="b"> cm
+                                <input id="input-pentagon-one" class="w-100" type="text" placeholder="p"> cm <input id="input-pentagon-two" class="w-100" type="text" placeholder="b"> cm
                             </div>
-                            <button class="btn w-100 roundad-3">Calculate</button>
+                            <button id="btn-pentagon" class="btn w-100 roundad-3">Calculate</button>
                         </div> 
                         <div class="geometry-item border border-1 text-center rounded-3">
                             <img class="pb-5" src="images/ellipse.png" alt="Image">
-                            <h2>Ellipse</h2>
+                            <h2 id="ellipse-title">Ellipse</h2>
                             <h3>Area (A) = PIab</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
-                                <input class="w-100" type="text" placeholder="a"> cm <input class="w-100" type="text" placeholder="b"> cm
+                                <input id="input-ellipse-one" class="w-100" type="text" placeholder="a"> cm <input id="input-ellipse-two" class="w-100" type="text" placeholder="b"> cm
                             </div>
-                            <button class="btn w-100 roundad-3">Calculate</button>
+                            <button id="btn-ellipse" class="btn w-100 roundad-3">Calculate</button>
                         </div>
                     </div>
                 </div>
