--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm">
                 <div class="header-btn text-end">
-                    <button class="btn  px-4 py-2">Blog</button>
+                    <button id="btn-blog" class="btn  px-4 py-2">Blog</button>
                 </div>
             </div>
         </div>
