--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <!-- Header area start  -->
- <header class="header bg-light roundad-5 py-2">
-    <div class="container">
+ <header class="header bg-light roundad-5 py-2 px-4">
+    <div class="container-fulid">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm">
                 <div class="header logo">
@@ -39,7 +39,9 @@
                 <div class="col-lg-9 col-md-9 col-sm">
                     <div class="geometry-left">
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/triangle.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/triangle.png" alt="Image">
+                            </div>
                             <h2 id="triangle-title">Triangle</h2>
                             <h3>Area (A) = 0.5 * b * h</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
@@ -48,7 +50,9 @@
                             <button id="btn-triangle" class="btn w-100 roundad-3">Calculate</button>
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/rectangle.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/rectangle.png" alt="Image">
+                            </div> 
                             <h2 id="rectangle-title">Rectangle</h2>
                             <h3>Area (A) = w * I</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
@@ -57,7 +61,9 @@
                             <button id="btn-rectangle" class="btn w-100 roundad-3">Calculate</button>
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/parallelogram.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/parallelogram.png" alt="Image">
+                            </div>  
                             <h2 id="parallelogram-title">Parallelogram</h2>
                             <h3>Area (A) = b * h</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
@@ -66,7 +72,9 @@
                             <button id="btn-parallelogram" class="btn w-100 roundad-3">Calculate</button> 
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/rhombus.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/rhombus.png" alt="Image">
+                            </div>  
                             <h2 id="rhombus-title">Rhombus</h2>
                             <h3>Area (A) = 0.5 * d1 * d2</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
@@ -75,7 +83,9 @@
                             <button id="btn-rhombus" class="btn w-100 roundad-3">Calculate</button>
                         </div>
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/parallelogram.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/parallelogram.png" alt="Image">
+                            </div>   
                             <h2 id="pentagon-title">Pentagon</h2>
                             <h3>Area (A) = 0.5 * p * b</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
@@ -84,7 +94,9 @@
                             <button id="btn-pentagon" class="btn w-100 roundad-3">Calculate</button>
                         </div> 
                         <div class="geometry-item border border-1 text-center rounded-3">
-                            <img class="pb-5" src="images/ellipse.png" alt="Image">
+                            <div class="geometry-img">
+                                <img class="pb-5" src="images/ellipse.png" alt="Image">
+                            </div>   
                             <h2 id="ellipse-title">Ellipse</h2>
                             <h3>Area (A) = PIab</h3>
                             <div class="geometry-input-wrapper d-flex pb-5 pt-2 gap-2">
