Blog content added

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm">
-                <div class="header logo">
+                <div class="header-logo">
                     <img src="images/logo.png" alt="Logo">
                 </div>
             </div>
@@ -34,11 +34,36 @@
  <section class="blog-hero">
     <div class="container">
         <div class="row">
-            <h2 class="text-center">Latest Blog</h2>
+            <h2 class="text-center pb-3">FAQ</h2>
             <div class="col-xl-12"> 
-                <img class="w-100" src="images/download.jpg" alt="">
-                 <h3>Minimal Style</h3>
-                 <p>Welcome, it’s great to have you here. We know that first impressions are important, so we’ve populated your new site with some initial getting started posts that will help you get familiar…</p>
+                 <div class="blog-wrapper">
+                    <h2> What is DOM and what is the purpose of DOM?</h2>
+                 <p>DOM is  the Document Object Model. It's a the for HTML and XML documents. and We're concerned with HTML file. The HTML browsers to display elements on the page. and created best features sort time and browser interectivity.</p>
+                 <p>we are use DOM perpose becouse it is very intractivity In website development, DOM stands for Document Object Model. It is a programming interface that allows us to create, change, or remove elements from a website document. we are using easy</p>
+                 <h2>How will you select HTML elements using DOM? Name the DOM methods?</h2>
+                 <p>First of all, There are five ways we usually select DOM elements</p>
+                 <ol>
+                    <li>getElementsByTagName()</li>
+                    <li>getElementsByClassName()</li>
+                    <li>getElementById()</li>
+                    <li>querySelector()</li>
+                    <li>querySelectorAll()</li>
+                 </ol>
+                 <p>We usually use DOM method to capture the HTML element through which we do the manipulation as shown below.</p>
+                 <ol>
+                    <li>DOM getElementById() Method.</li>
+                    <li>DOM getElementsByClassName() Method.</li>
+                    <li>DOM getElementsByName() Method.</li>
+                    <li>DOM getElementsByTagName() Method.</li>
+                    <li>DOM querySelector() Method</li>
+                 </ol>
+                 <h2>What is event bubble?</h2>
+                 <p>Event Bubbling is a  DOM. becouse  It happens when an element receives an event, and that event bubbles. if we are stop this event bubling so we can use stopPropagation method.  to its parent and ancestor elements in the DOM tree until it gets to the root element etc.</p>
+                 <h2>What is a callback function and why will you use it?</h2>
+                 <p>Callback function is a function that is passed as an argument to another function, to be “called back” at a later time. callback function that accepts other functions as arguments. It’s created combination of these two that allow us to extend our functionality.</p>
+                 <p>Callback functions we're are use because many JavaScript moves are asynchronous. Alternatively, it executes in the heritage at the same time as the rest of the code runs. A callback's purpose is to execute code in reaction to an event.</p>
+                 </div>
+                  
             </div>
              
         </div>
