--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <!-- Header area start  -->
- <header class="header bg-light roundad-5 py-2 px-4">
+ <header class="header roundad-5 py-2 px-4">
     <div class="container-fulid">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm">
-                <div class="header logo">
+                <div class="header-logo">
                     <img src="images/logo.png" alt="Logo">
                 </div>
             </div>
