Responsive isse fixed

--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Header area start  -->
- <header class="header bg-light roundad-5 py-2">
+ <header class="header roundad-5 py-2">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm">
@@ -31,10 +31,11 @@
  </header>
  <!-- Header area end --> 
 
+ <!-- Blog are start  -->
  <section class="blog-hero">
     <div class="container">
         <div class="row">
-            <h2 class="text-center pb-3">FAQ</h2>
+            <h2 class="text-center pb-3 pt-3">FAQ</h2>
             <div class="col-xl-12"> 
                  <div class="blog-wrapper">
                     <h2> What is DOM and what is the purpose of DOM?</h2>
@@ -69,6 +70,10 @@
         </div>
     </div>
  </section> 
-    
+  <!-- Blog are end  -->
+
+ <script src="js/bootstrap.min.js"></script>
+ <script src="js/common.js"></script> 
+ <script src="js/main.js"></script> 
 </body>
 </html>
