--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
  </header>
  <!-- Header area end -->
 
+ <!-- main  -->
  <main>
     <!-- Geometry area start -->
     <section class="geometry-area pt-5">
         <div class="container-fulid">
             <div class="row"> 
-                <div class="col-lg-9 col-md-9 col-sm">
+                <div class="col-lg-8 col-md-8 col-sm">
                     <div class="geometry-left">
                         <div class="geometry-item border border-1 text-center rounded-3">
                             <div class="geometry-img">
@@ -106,17 +107,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm">
+                <div class="col-lg-4 col-md-4 col-sm">
                     <div class="geometry-right">
                         <div class="calculation-item border border-1 text-center rounded-3"> 
                             <h2>Area Calculation</h2>
-                            <ul id="result-list">
-                                <!-- <li>
-                                    <span>1.</span>
-                                    <span>Ellipse</span>
-                                    <span>120cm<sup>2</sup></span>
-                                    <span class="btn-convert">Covert to m<sup>2</sup></span>
-                                </li>  -->
+                            <ul id="result-list"> 
                                  
                             </ul> 
                         </div> 
@@ -128,10 +123,12 @@
       <!-- Geometry area end -->
 
  </main>
-
-
+ <!-- /main  -->
+ 
+   <!-- Script js start -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/common.js"></script> 
+    <script src="js/utilise.js"></script> 
     <script src="js/main.js"></script> 
+    <!-- Script js end -->
 </body>
 </html>
