--- a/blog.html
+++ b/blog.html
@@ -38,31 +38,32 @@
             <h2 class="text-center pb-3 pt-3">FAQ</h2>
             <div class="col-xl-12"> 
                  <div class="blog-wrapper">
+                 <div class="blog-item border border-2 rounded-3 shadow-sm p-3 mb-4">
                     <h2> What is DOM and what is the purpose of DOM?</h2>
-                 <p>DOM is  the Document Object Model. It's a the for HTML and XML documents. and We're concerned with HTML file. The HTML browsers to display elements on the page. and created best features sort time and browser interectivity.</p>
-                 <p>we are use DOM perpose becouse it is very intractivity In website development, DOM stands for Document Object Model. It is a programming interface that allows us to create, change, or remove elements from a website document. we are using easy</p>
-                 <h2>How will you select HTML elements using DOM? Name the DOM methods?</h2>
-                 <p>First of all, There are five ways we usually select DOM elements</p>
-                 <ol>
-                    <li>getElementsByTagName()</li>
-                    <li>getElementsByClassName()</li>
-                    <li>getElementById()</li>
-                    <li>querySelector()</li>
-                    <li>querySelectorAll()</li>
-                 </ol>
-                 <p>We usually use DOM method to capture the HTML element through which we do the manipulation as shown below.</p>
-                 <ol>
-                    <li>DOM getElementById() Method.</li>
-                    <li>DOM getElementsByClassName() Method.</li>
-                    <li>DOM getElementsByName() Method.</li>
-                    <li>DOM getElementsByTagName() Method.</li>
-                    <li>DOM querySelector() Method</li>
-                 </ol>
-                 <h2>What is event bubble?</h2>
-                 <p>Event Bubbling is a  DOM. becouse  It happens when an element receives an event, and that event bubbles. if we are stop this event bubling so we can use stopPropagation method.  to its parent and ancestor elements in the DOM tree until it gets to the root element etc.</p>
-                 <h2>What is a callback function and why will you use it?</h2>
-                 <p>Callback function is a function that is passed as an argument to another function, to be “called back” at a later time. callback function that accepts other functions as arguments. It’s created combination of these two that allow us to extend our functionality.</p>
-                 <p>Callback functions we're are use because many JavaScript moves are asynchronous. Alternatively, it executes in the heritage at the same time as the rest of the code runs. A callback's purpose is to execute code in reaction to an event.</p>
+                    <p>DOM is  the Document Object Model. It's a the for HTML and XML documents. and We're concerned with HTML file. The HTML browsers to display elements on the page. and created best features sort time and browser interectivity.</p>
+                    <p>we are use DOM perpose becouse it is very intractivity In website development, DOM stands for Document Object Model. It is a programming interface that allows us to create, change, or remove elements from a website document. we are using easy</p>
+                 </div>
+                 <div class="blog-item border border-2 rounded-3 shadow-sm p-3 mb-4">
+                    <h2>How will you select HTML elements using DOM? Name the DOM methods?</h2>
+                    <p>We usually use our five methods to catch an HTML element that we usually get away with using classname, tag name, id, queryslector, queryslectorall. and createting intractive features etc.</p>
+                    <p>We usually use DOM method to capture the HTML element through which we do the manipulation as shown below.</p>
+                    <ol>
+                       <li>DOM getElementById() Method.</li>
+                       <li>DOM getElementsByClassName() Method.</li>
+                       <li>DOM getElementsByName() Method.</li>
+                       <li>DOM getElementsByTagName() Method.</li>
+                       <li>DOM querySelector() Method</li>
+                    </ol>
+                 </div>
+                 <div class="blog-item border border-2 rounded-3 shadow-sm p-3 mb-4">
+                    <h2>What is event bubble?</h2>
+                    <p>Event Bubbling is a  DOM. becouse  It happens when an element receives an event, and that event bubbles. if we are stop this event bubling so we can use stopPropagation method.  to its parent and ancestor elements in the DOM tree until it gets to the root element etc.</p>
+                 </div> 
+                 <div class="blog-item border border-2 rounded-3 shadow-sm p-3">
+                    <h2>What is a callback function and why will you use it?</h2>
+                    <p>Callback function is a function that is passed as an argument to another function, to be “called back” at a later time. callback function that accepts other functions as arguments. It’s created combination of these two that allow us to extend our functionality.</p>
+                    <p>Callback functions we're are use because many JavaScript moves are asynchronous. Alternatively, it executes in the heritage at the same time as the rest of the code runs. A callback's purpose is to execute code in reaction to an event.</p>
+                 </div> 
                  </div>
                   
             </div>
@@ -73,7 +74,7 @@
   <!-- Blog are end  -->
 
  <script src="js/bootstrap.min.js"></script>
- <script src="js/common.js"></script> 
+ <script src="js/utilise.js"></script> 
  <script src="js/main.js"></script> 
 </body>
 </html>
