--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm">
                 <div class="header-logo">
-                    <img src="images/logo.png" alt="Logo">
+                   <a href="#">Gerometry</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm">
